--- a/Copy_of_229351_LAB05.ipynb
+++ b/Copy_of_229351_LAB05.ipynb
@@ -15042,32 +15042,111 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 48,
       "metadata": {
         "id": "peYwcfXMO0cb",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 299
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6824724f-d712-4d96-e38a-9e0801446e6b"
+        "outputId": "b3ada582-d488-4b21-ef20-da44eb6e7a60"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "shapes (1,392) and (2,) not aligned: 392 (dim 1) != 2 (dim 0)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-41-3720684443.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Make predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/statsmodels/base/model.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, exog, transform, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1172\u001b[0m                                                         transform=transform)\n\u001b[1;32m   1173\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1174\u001b[0;31m         predict_results = self.model.predict(self.params, exog, *args,\n\u001b[0m\u001b[1;32m   1175\u001b[0m                                              **kwargs)\n\u001b[1;32m   1176\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/statsmodels/regression/linear_model.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, params, exog)\u001b[0m\n\u001b[1;32m    407\u001b[0m             \u001b[0mexog\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    408\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 409\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexog\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    410\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    411\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_distribution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexog\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdist_class\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: shapes (1,392) and (2,) not aligned: 392 (dim 1) != 2 (dim 0)"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([19.41604569, 13.89148002, 16.25915102, 16.25915102, 17.83759835,\n",
+              "        8.68260382,  5.21001968,  5.99924335,  4.42079602,  9.94536168,\n",
+              "       13.10225635, 14.68070368, 16.25915102,  4.42079602, 24.94061135,\n",
+              "       24.94061135, 24.62492189, 26.51905869, 26.04552449, 32.67500329,\n",
+              "       26.20336922, 25.72983502, 24.94061135, 22.09940615, 25.72983502,\n",
+              "        5.99924335,  8.36691435,  6.78846702,  9.47182748, 26.04552449,\n",
+              "       25.72983502, 24.94061135, 24.15138769, 23.36216402, 24.15138769,\n",
+              "       26.04552449, 24.15138769, 13.89148002, 12.31303268, 15.78561682,\n",
+              "       16.25915102, 11.52380902, 13.10225635, 12.31303268, 22.57294035,\n",
+              "       28.57104022, 24.15138769, 26.04552449, 26.36121395, 25.72983502,\n",
+              "       28.88672969, 27.93966129, 29.67595335, 29.04457442, 30.46517702,\n",
+              "       28.88672969, 24.94061135, 27.30828235, 31.41224542, 25.72983502,\n",
+              "       26.36121395, 13.89148002, 12.31303268, 16.25915102, 15.78561682,\n",
+              "       16.25915102,  7.10415648, 15.46992735, 14.68070368,  9.94536168,\n",
+              "       24.62492189, 16.25915102, 19.41604569, 17.83759835, 16.25915102,\n",
+              "       22.25725089, 27.93966129, 26.20336922, 29.04457442, 26.36121395,\n",
+              "       25.41414555, 24.62492189, 27.30828235, 26.04552449, 12.31303268,\n",
+              "       16.25915102, 17.04837468, 18.31113255, 16.25915102,  8.68260382,\n",
+              "       16.25915102, 14.99639315, 16.25915102,  5.99924335,  4.42079602,\n",
+              "       12.31303268, 23.36216402, 24.15138769, 24.15138769, 26.04552449,\n",
+              "       24.94061135, 32.67500329, 16.25915102, 13.57579055, 13.10225635,\n",
+              "       11.52380902, 24.15138769, 26.04552449, 28.57104022, 25.09845609,\n",
+              "       25.72983502, 26.51905869, 23.04647455, 25.72983502, 17.04837468,\n",
+              "        3.63157235, 32.20146909, 28.09750602, 25.57199029, 22.25725089,\n",
+              "       16.25915102, 22.57294035, 20.67880355, 11.52380902, 24.94061135,\n",
+              "       24.15138769, 24.15138769, 29.36026389, 27.30828235, 29.67595335,\n",
+              "       28.09750602, 24.15138769, 22.57294035, 23.36216402, 17.83759835,\n",
+              "       16.25915102, 16.25915102, 17.83759835, 16.25915102, 26.83474815,\n",
+              "       29.36026389, 27.62397182, 31.72793489, 30.30733229, 28.09750602,\n",
+              "       28.09750602, 28.09750602, 24.62492189, 25.25630082, 29.36026389,\n",
+              "       24.94061135, 23.36216402, 28.57104022, 28.57104022, 13.10225635,\n",
+              "       17.04837468, 16.25915102, 16.57484048, 22.57294035, 23.36216402,\n",
+              "       22.57294035, 24.94061135, 22.57294035, 22.57294035, 19.57389042,\n",
+              "       28.09750602, 26.83474815, 24.15138769, 27.62397182, 24.78276662,\n",
+              "       28.72888495, 24.62492189, 24.62492189, 28.88672969, 25.72983502,\n",
+              "       24.94061135, 26.04552449, 24.46707715, 21.78371669, 31.57009015,\n",
+              "       26.36121395, 27.15043762, 25.41414555, 27.46612709, 26.83474815,\n",
+              "       17.83759835, 16.25915102, 20.99449302, 15.94346155, 24.15138769,\n",
+              "       23.36216402, 27.15043762, 25.72983502, 31.72793489, 30.46517702,\n",
+              "       28.88672969, 31.57009015, 24.15138769, 27.62397182, 22.57294035,\n",
+              "       24.94061135, 28.72888495, 28.88672969, 28.09750602, 28.57104022,\n",
+              "       23.83569822, 16.25915102, 26.04552449, 22.88862982, 20.99449302,\n",
+              "       11.52380902, 17.04837468, 19.41604569, 16.25915102, 29.20241915,\n",
+              "       27.30828235, 30.78086649, 24.78276662, 28.88672969, 17.04837468,\n",
+              "       22.57294035, 17.04837468, 19.41604569, 22.57294035, 23.36216402,\n",
+              "       24.15138769, 24.46707715, 11.52380902, 13.10225635,  9.94536168,\n",
+              "       16.41699575, 27.62397182, 26.04552449, 28.09750602, 25.88767975,\n",
+              "       29.99164282, 26.83474815, 29.36026389, 27.62397182, 24.62492189,\n",
+              "       22.57294035, 22.57294035, 32.35931382, 29.51810862, 31.72793489,\n",
+              "       28.88672969, 30.46517702, 22.57294035, 17.83759835, 17.99544309,\n",
+              "       23.36216402, 24.94061135, 26.51905869, 26.04552449, 24.15138769,\n",
+              "       25.72983502, 23.36216402, 26.51905869, 22.57294035, 20.99449302,\n",
+              "       17.04837468, 13.89148002, 17.99544309, 17.83759835, 29.20241915,\n",
+              "       24.94061135, 24.62492189, 28.09750602, 24.94061135, 23.36216402,\n",
+              "       26.51905869, 24.62492189, 23.67785349, 20.20526935, 21.78371669,\n",
+              "       18.94251149, 28.72888495, 29.20241915, 21.78371669, 26.51905869,\n",
+              "       26.04552449, 25.72983502, 22.57294035, 19.41604569, 19.57389042,\n",
+              "       18.15328782, 18.62682202, 15.46992735, 17.52190888, 20.20526935,\n",
+              "       16.25915102, 28.72888495, 29.67595335, 27.30828235, 27.30828235,\n",
+              "       27.78181655, 20.20526935, 28.72888495, 25.72983502, 28.88672969,\n",
+              "       28.88672969, 29.67595335, 29.04457442, 25.72983502, 21.78371669,\n",
+              "       21.78371669, 25.72983502, 27.93966129, 30.46517702, 28.88672969,\n",
+              "       29.67595335, 25.72983502, 26.04552449, 25.72983502, 25.72983502,\n",
+              "       27.62397182, 25.72983502, 28.09750602, 25.41414555, 28.09750602,\n",
+              "       29.67595335, 23.36216402, 29.67595335, 32.35931382, 32.35931382,\n",
+              "       29.36026389, 29.36026389, 29.36026389, 29.36026389, 30.14948755,\n",
+              "       19.10035622, 24.15138769, 26.04552449, 28.57104022, 26.67690342,\n",
+              "       26.67690342, 25.41414555, 22.57294035, 26.67690342, 30.78086649,\n",
+              "       29.83379809, 30.46517702, 29.36026389, 29.67595335, 30.14948755,\n",
+              "       29.20241915, 29.99164282, 29.67595335, 29.67595335, 28.25535075,\n",
+              "       28.09750602, 28.09750602, 24.15138769, 28.25535075, 27.30828235,\n",
+              "       27.93966129, 21.62587195, 20.99449302, 22.57294035, 23.36216402,\n",
+              "       26.04552449, 26.51905869, 26.04552449, 26.04552449, 26.04552449,\n",
+              "       26.51905869, 26.67690342, 25.72983502, 25.41414555, 28.25535075,\n",
+              "       29.20241915, 29.20241915, 29.99164282, 28.88672969, 26.04552449,\n",
+              "       28.09750602, 28.88672969, 29.36026389, 29.36026389, 29.36026389,\n",
+              "       22.57294035, 26.51905869, 25.41414555, 22.25725089, 24.78276662,\n",
+              "       26.67690342, 25.72983502, 26.36121395, 31.72793489, 26.67690342,\n",
+              "       27.46612709, 26.99259289])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
         }
       ],
       "source": [
-        "# Make predictions\n",
+        "\n",
+        "model1 = LinearRegression()\n",
+        "X = auto_df[['horsepower']]  # ต้องเป็น DataFrame หรือ reshape แล้ว\n",
+        "y = auto_df['mpg']\n",
+        "model1.fit(X, y)\n",
+        "\n",
         "model1.predict(X)"
       ]
     },
