--- a/229351-LAB05.ipynb
+++ b/229351-LAB05.ipynb
@@ -26,29 +26,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "ntO6KNB7A24q",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d7becd2e-7279-447e-af7b-22f8d9cc9d81"
+        "outputId": "7292c215-1e67-49e6-ea62-528845aee1ef"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-07 02:13:13--  https://donlapark.pages.dev/229351/data/Auto.csv\n",
-            "Resolving donlapark.pages.dev (donlapark.pages.dev)... 172.66.44.200, 172.66.47.56, 2606:4700:310c::ac42:2f38, ...\n",
-            "Connecting to donlapark.pages.dev (donlapark.pages.dev)|172.66.44.200|:443... connected.\n",
+            "--2025-08-10 17:30:19--  https://donlapark.pages.dev/229351/data/Auto.csv\n",
+            "Resolving donlapark.pages.dev (donlapark.pages.dev)... 172.66.47.56, 172.66.44.200, 2606:4700:310c::ac42:2cc8, ...\n",
+            "Connecting to donlapark.pages.dev (donlapark.pages.dev)|172.66.47.56|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 18079 (18K) [text/csv]\n",
             "Saving to: ‘Auto.csv’\n",
             "\n",
             "\rAuto.csv              0%[                    ]       0  --.-KB/s               \rAuto.csv            100%[===================>]  17.66K  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-08-07 02:13:14 (102 MB/s) - ‘Auto.csv’ saved [18079/18079]\n",
+            "2025-08-10 17:30:19 (86.8 MB/s) - ‘Auto.csv’ saved [18079/18079]\n",
             "\n"
           ]
         }
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "5Tebr3-dBKxj"
       },
@@ -72,14 +72,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "O_4Mr2OWaAae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "c5fff306-3fde-4ffc-863a-b1b594dff241"
+        "outputId": "c3a52085-fc4b-4329-c3f9-0d9e2d6b62b0"
       },
       "outputs": [
         {
@@ -102,7 +102,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0ad6e337-eef8-4f12-a5a2-da830b0679ac\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0de415ed-2415-4396-9519-b65725d1e887\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -199,7 +199,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ad6e337-eef8-4f12-a5a2-da830b0679ac')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0de415ed-2415-4396-9519-b65725d1e887')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -251,12 +251,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-0ad6e337-eef8-4f12-a5a2-da830b0679ac button.colab-df-convert');\n",
+              "        document.querySelector('#df-0de415ed-2415-4396-9519-b65725d1e887 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-0ad6e337-eef8-4f12-a5a2-da830b0679ac');\n",
+              "        const element = document.querySelector('#df-0de415ed-2415-4396-9519-b65725d1e887');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -276,8 +276,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b88d2330-ce3a-409a-a365-78ee38889660\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b88d2330-ce3a-409a-a365-78ee38889660')\"\n",
+              "    <div id=\"df-a0d9f2f2-df57-4a36-b1ab-b992d974b8ac\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a0d9f2f2-df57-4a36-b1ab-b992d974b8ac')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -396,7 +396,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b88d2330-ce3a-409a-a365-78ee38889660 button');\n",
+              "            document.querySelector('#df-a0d9f2f2-df57-4a36-b1ab-b992d974b8ac button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -413,7 +413,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ],
       "source": [
@@ -464,14 +464,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "XlOmwZlvQXAR",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "51028af0-81a2-47fc-dce3-76a26d9db20d"
+        "outputId": "0b560bfc-441e-4e46-f722-da92a2d35902"
       },
       "outputs": [
         {
@@ -487,7 +487,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1f238972-65ff-4566-9a8f-35dd51fbc7b2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-894b0ca9-2f18-4709-bc05-cf926ea3fb34\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -572,7 +572,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f238972-65ff-4566-9a8f-35dd51fbc7b2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-894b0ca9-2f18-4709-bc05-cf926ea3fb34')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -624,12 +624,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1f238972-65ff-4566-9a8f-35dd51fbc7b2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-894b0ca9-2f18-4709-bc05-cf926ea3fb34 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1f238972-65ff-4566-9a8f-35dd51fbc7b2');\n",
+              "        const element = document.querySelector('#df-894b0ca9-2f18-4709-bc05-cf926ea3fb34');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -649,8 +649,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a35e92d1-599e-490b-8a67-10b9ba7f6983\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a35e92d1-599e-490b-8a67-10b9ba7f6983')\"\n",
+              "    <div id=\"df-020b185e-d607-4dd3-9893-8bebd740a17e\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-020b185e-d607-4dd3-9893-8bebd740a17e')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -769,7 +769,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a35e92d1-599e-490b-8a67-10b9ba7f6983 button');\n",
+              "            document.querySelector('#df-020b185e-d607-4dd3-9893-8bebd740a17e button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -786,7 +786,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ],
       "source": [
@@ -1145,7 +1145,7 @@
         "# Calculate Total Sum of Squares\n",
         "y_mean = y.mean()\n",
         "\n",
-        "TSS = np.sum(np.square(y-y_mean))# TODO: your code here\n",
+        "TSS = np.sum(np.square(y-y_mean))\n",
         "\n",
         "RSS = np.sum(np.square(y-y_pred))"
       ]
@@ -1509,13 +1509,97 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 6,
       "metadata": {
-        "id": "7eyPhWNKTJEW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7eyPhWNKTJEW",
+        "outputId": "2e713799-50b5-4f2c-dda8-b5156a8dc668"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:                    mpg   R-squared:                       0.808\n",
+            "Model:                            OLS   Adj. R-squared:                  0.807\n",
+            "Method:                 Least Squares   F-statistic:                     819.5\n",
+            "Date:                Sun, 10 Aug 2025   Prob (F-statistic):          3.33e-140\n",
+            "Time:                        17:30:32   Log-Likelihood:                -1037.6\n",
+            "No. Observations:                 392   AIC:                             2081.\n",
+            "Df Residuals:                     389   BIC:                             2093.\n",
+            "Df Model:                           2                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "Intercept    -14.3473      4.007     -3.581      0.000     -22.224      -6.470\n",
+            "weight        -0.0066      0.000    -30.911      0.000      -0.007      -0.006\n",
+            "year           0.7573      0.049     15.308      0.000       0.660       0.855\n",
+            "==============================================================================\n",
+            "Omnibus:                       42.504   Durbin-Watson:                   1.230\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               71.997\n",
+            "Skew:                           0.670   Prob(JB):                     2.32e-16\n",
+            "Kurtosis:                       4.616   Cond. No.                     7.17e+04\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The condition number is large, 7.17e+04. This might indicate that there are\n",
+            "strong multicollinearity or other numerical problems.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Block for running your own code"
+        "# Block for running your own code\n",
+        "import statsmodels.formula.api as smf\n",
+        "\n",
+        "\n",
+        "predictors = list(predictor_names[1:-2])\n",
+        "\n",
+        "while True:\n",
+        "    formula = 'mpg ~ ' + ' + '.join(predictors)\n",
+        "    model = smf.ols(formula, auto_df).fit()\n",
+        "\n",
+        "    pvals = model.pvalues.drop('Intercept')\n",
+        "    max_pval = pvals.max()\n",
+        "    if max_pval < 0.05:\n",
+        "        break\n",
+        "\n",
+        "    worst_predictor = pvals.idxmax()\n",
+        "    predictors.remove(worst_predictor)\n",
+        "print(model.summary())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(model.pvalues)\n",
+        "print(\"t-value of weight:\", model.pvalues[\"weight\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "skr2MQQlCUyX",
+        "outputId": "c2cabca0-d6cf-4f7b-c9bb-c50809c1bb2b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Intercept     3.856624e-04\n",
+            "weight       8.361624e-107\n",
+            "year          9.772260e-42\n",
+            "dtype: float64\n",
+            "t-value of weight: 8.361624441035716e-107\n"
+          ]
+        }
       ]
     },
     {
